# postfix-sql-ucli

./: .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: github-actions.yml
docs/: conf.py  usage.rst
src/postfix_sql_ucli/: cli.py  models.py  operations.py  utils.py
tests/: postfix-sql-ucli.yml  test_cli.py  test_operations.py  test_utils.py
